# viereck

./: Cargo.toml  README.md  script.sh  test.json
examples/: panel.rs
scripts/: animated.sh  battery.sh  nested.sh  panel.sh  picture.sh
src/: draw.rs  lib.rs  main.rs  object.rs  window.rs
