[package]
name = "viereck"
version = "0.1.0"
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.8.0"
anyhow = "1.0.26"
piet = "0.0.7"
cairo-rs = { version = "0.7.0", features = ["xcb"] }
xcb-util = { version = "0.2.1", features = ["ewmh"] }
cairo-sys-rs = "0.9.2"
piet-cairo = "0.0.7"
structopt = "0.3.7"
tokio = { version = "0.2.6", features = ["full"] }
mio = "0.6.21"
stretch = { git = "https://github.com/vislyhq/stretch.git", rev="523ef1c2744a6d45c6be5dc48a9d86ea07c6719b", features = ["serde_camel_case"] }
kurbo = "0.5.6"
futures = "0.3.1"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
